--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,13 @@
 <html>
     <head>
         <title>Titulo del Blog</title>
-        <link rel="stylesheet" href="css/styles.css"/>
+        <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     </head>
     <body>
-        <h1>Primer titulo del blog</h1>
-        <p>Este es un parrafo del blog</p>
+        <div class="contenedor">
+            <h1>Primer titulo del blog</h1>
+            <p>Aqui va el parrafo del blog </p>
+
+        </div>
     </body>
 </html>
