--- a/blogpost.html
+++ b/blogpost.html
@@ -3,8 +3,13 @@
         <title>Titulo del Blog</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     </head>
+   
     <body>
-        <div class="contenedor">
+        
+        <div id="contenedor">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <h1>Primer titulo del blog</h1>
             <p>Aqui va el parrafo del blog </p>
 
