Propuesta de la cabecera, sujeta a aprobacion!

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,9 @@
         
         <div id="contenedor">
             <div id="cabecera">
-                Cabecera
+                <span>
+                Esta es la cabecera, debera asignarse texto!!
+                </span>
             </div>
             <h1>Primer titulo del blog</h1>
             <p>Aqui va el parrafo del blog </p>
