Se agrego un parrafo adicional

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,14 @@
             <h1>Primer titulo del blog</h1>
             <p>Aqui va el parrafo del blog </p>
 
+            <p>Lorem ipsum dolor sit, 
+                amet consectetur adipisicing elit. 
+                Aliquam, at necessitatibus. 
+                Eveniet accusamus maiores, incidunt, 
+                adipisci dolorum aliquid eius deleniti 
+                culpa commodi, debitis itaque atque 
+                pariatur veritatis fuga quas. Unde.</p>
+
         </div>
     </body>
 </html>
