Se realizaron cambios en la cabecera y en el body en cssgit merge master

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
         <div id="contenedor">
             <div id="cabecera">
                 <span>
-                Esta es la cabecera, debera asignarse texto!!
+                Esto es un cambio para aprender como solucionar un conflicto, cuando existen cambios en las mismas lineas de codigo!!!
                 </span>
             </div>
             <h1>Primer titulo del blog</h1>
