--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
         <div id="contenedor">
             <div id="cabecera">
                 <span>
-                Esta es la cabecera, debera asignarse texto!!
+                Cambios en la Rama Master, queremos solucionar un conflicto!!!
                 </span>
             </div>
             <h1>Primer titulo del blog</h1>
@@ -22,6 +22,13 @@
                 adipisci dolorum aliquid eius deleniti 
                 culpa commodi, debitis itaque atque 
                 pariatur veritatis fuga quas. Unde.</p>
+
+            <p>Lorem ipsum dolor sit amet, 
+                consectetur adipisicing elit. 
+                Nisi provident vero quasi repellat natus alias 
+                totam maxime necessitatibus impedit ab consequatur 
+                quis, repudiandae architecto consequuntur, quos, 
+                libero mollitia recusandae reiciendis!</p>
 
         </div>
     </body>
