--- a/blogpost.html
+++ b/blogpost.html
@@ -9,8 +9,7 @@
         <div id="contenedor">
             <div id="cabecera">
                 <span>
-                Cambios en la Rama Master, queremos solucionar un conflicto!!!
-                Esto es un cambio para aprender como solucionar un conflicto, cuando existen cambios en las mismas lineas de codigo!!!
+                Despues de solucionar los conflictos, todo esta funcionando perfectamente!!...
                 </span>
             </div>
             <h1>Primer titulo del blog</h1>
