--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
         <div id="contenedor">
             <div id="cabecera">
                 <span>
+                Probando la conexion con las llaves ...
                 Despues de solucionar los conflictos, todo esta funcionando perfectamente!!...
                 </span>
             </div>
